css fix for quiz label on mobile

--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -287,7 +287,7 @@
 		width: 150px;
 		height: 40px;
 		top: 0;
-		left: 40%;
+		left: 43%;
 		right: auto;
 		background-color: @color-primary;
 		font-size: 16px;
