--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2281,7 +2281,7 @@ input#duration {
     width: 150px;
     height: 40px;
     top: 0;
-    left: 40%;
+    left: 43%;
     right: auto;
     background-color: #e74c30;
     font-size: 16px;
